@startuml servidor_central_parte4a_repositorios_core
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classHeaderBackgroundColor #E1F5EE
skinparam classBorderColor #0F6E56
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #0F6E56
skinparam stereotypeCBackgroundColor #EEEDFE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #D1ECF1
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50

title Servidor Central — Parte 4A: Repositórios (Core e Autenticação)

' ╔══════════════════════════════════════╗
' ║    REPOSITÓRIO - CORE E AUTENTICAÇÃO ║
' ╚══════════════════════════════════════╝
package "Repositório (Core e Autenticação)" #FFF8EE {

  interface CEORepositorio {
    + buscarPorCredenciais(nomeUtilizador : String, hashPalavraPasse : String) : CEO
    + atualizar(ceo : CEO) : void
  }

  class CEORepositorioImpl {
    - conexao : Connection
    + buscarPorCredenciais(nomeUtilizador : String, hashPalavraPasse : String) : CEO
    + atualizar(ceo : CEO) : void
  }

  interface LojaRepositorio {
    + buscarPorId(idLoja : String) : Loja
    + guardarSeNaoExistir(loja : Loja) : Loja
    + listarTodas() : List~Loja~
  }

  class LojaRepositorioImpl {
    - conexao : Connection
    + buscarPorId(idLoja : String) : Loja
    + guardarSeNaoExistir(loja : Loja) : Loja
    + listarTodas() : List~Loja~
  }

  interface FechoDiaCentralRepositorio {
    + guardar(fecho : FechoDiaCentral) : void
    + buscarPorData(data : LocalDate) : List~FechoDiaCentral~
    + buscarLojasFaltantes(data : LocalDate) : List~Loja~
  }

  class FechoDiaCentralRepositorioImpl {
    - conexao : Connection
    + guardar(fecho : FechoDiaCentral) : void
    + buscarPorData(data : LocalDate) : List~FechoDiaCentral~
    + buscarLojasFaltantes(data : LocalDate) : List~Loja~
  }
}

' Implementações realizam interfaces
CEORepositorioImpl ..|> CEORepositorio
LojaRepositorioImpl ..|> LojaRepositorio
FechoDiaCentralRepositorioImpl ..|> FechoDiaCentralRepositorio

@enduml